--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Antic+Didone&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="app.js"></script>
     </head>
     <body>
         <header>
-            <h1>The Adobe Café</h1>
+            <h1 id="header">The Adobe Café</h1>
             <nav>
                 <button class="mdc-button mdc-button--raised">
                     <span class="mdc-button__ripple"></span>
@@ -43,26 +44,27 @@
             <div class="mySlides fade">
                 <div class="numbertext">1 / 4</div>
                 <img src="res/foodA.jpg" style="width:100%">
-                <div class="text">Caption Text</div>
+                <div class="text"></div>
             </div>
             
             <div class="mySlides fade">
                 <div class="numbertext">2 / 4</div>
                 <img src="res/foodB.jpg" style="width:100%">
-                <div class="text">Caption Two</div>
+                <div class="text"></div>
             </div>
             
             <div class="mySlides fade">
                 <div class="numbertext">3 / 4</div>
                 <img src="res/foodC.jpg" style="width:100%">
-                <div class="text">Caption Three</div>
+                <div class="text"></div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">4 / 4</div>
                 <img src="res/foodD.jpg" style="width:100%">
-                <div class="text">Caption Three</div>
+                <div class="text"></div>
             </div>
         </div>
     </body>
+    <script src="slide.js"></script>
 </html>
