Implemented slide transition effect.

--- a/index.html
+++ b/index.html
@@ -40,30 +40,10 @@
         </header>
 
         <div class="slideshow-container">
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="numbertext">1 / 4</div>
-                <img src="res/foodA.jpg" style="width:100%">
-                <div class="text"></div>
-            </div>
-            
-            <div class="mySlides fade">
-                <div class="numbertext">2 / 4</div>
-                <img src="res/foodB.jpg" style="width:100%">
-                <div class="text"></div>
-            </div>
-            
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 4</div>
-                <img src="res/foodC.jpg" style="width:100%">
-                <div class="text"></div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">4 / 4</div>
-                <img src="res/foodD.jpg" style="width:100%">
-                <div class="text"></div>
-            </div>
+            <img src="res/foodA.jpg" class="slide slip"/>
+            <img src="res/foodB.jpg" class="slide slip"/>
+            <img src="res/foodC.jpg" class="slide slip"/>
+            <img src="res/foodD.jpg" class="slide slip"/>
         </div>
     </body>
     <script src="slide.js"></script>
