--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <h1 id="header">The Adobe Café</h1>
+            <h1 id="header">Adobe Café</h1>
         </header>
 
         <nav class="navbar">
