Added general information box.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
             <img src="res/foodD.jpg" class="slide slip"/>
         </div>
 
+        <figure class="gen_info">
+            <h3>Information</h3>
+            <ul class="gen_info_items">
+                <li>123 Sesame Street, Chicago</li>
+                <li>Hours: 11am-8pm</li>
+                <li><a href="tel:123-456-7890">123-456-7890</a></li>
+            </ul>
+        </figure>
+
         <article id="home_article">
             <p>
                 Lorem ipsum dolor sit amet, tollit detracto sapientem an mei, 
