Added basic footer.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                 Cu pro sumo dicta voluptaria, ut sint appareat vis, ut per labore vivendo singulis.
             </p>
         </article>
+        <footer>
+            <h3>Adobe Cafe</h3>
+            <h4>Website by Dan Tiberi</h4>
+        </footer>
     </body>
     <script src="slide.js"></script>
 </html>
